# iiii-project-backend

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-llama-server.ps1
apps/accounts/: serializers.py  urls.py  views.py
apps/ai_service/: admin.py  models.py  services.py
apps/divinations/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/donations/: serializers.py  services.py  urls.py  views.py
apps/fortunes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/system/: admin.py  models.py  urls.py  views.py
bruno/: README.md  bruno.json
bruno/01 Health/: Health Check.bru  folder.bru
bruno/02 Fortunes/: Get Fortune Detail.bru  List Fortune Sets.bru  folder.bru
bruno/03 Divinations/: Cast Blocks.bru  Complete Prayer.bru  Create Confirmed Session.bru  Create Session.bru  Delete Session.bru  Draw Fortune.bru  Get Session.bru  List Anonymous Sessions.bru  folder.bru
bruno/04 AI/: Delete Confirmed Session.bru  Interpret Session.bru  List Chat Messages.bru  Send Chat Message.bru  folder.bru
bruno/05 Auth/: Get Current User.bru  Get JWT.bru  Refresh JWT.bru  Register.bru  folder.bru
bruno/environments/: local.bru
config/: settings.py  urls.py  utils.py
docs/: API.md
llamacpp/: Dockerfile
llamacpp/llamacpp-linux/: libggml-base.so.0.15.3  libllama-common.so.0  libllama.so.0  libllama.so.0.0.9873  libmtmd.so.0  libmtmd.so.0.0.9873  llama  (+11 more)
tests/: test_accounts.py  test_ai_service.py  test_divinations.py  test_public_and_admin_api.py
(+11 files in other folders)
