[project]
name = "ai-fortune-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16",
    "djangorestframework-simplejwt>=5.5",
    "django-cors-headers>=4.7",
    "django-filter>=25.1",
    "httpx>=0.28",
    "opik>=1.8",
    "python-dotenv>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-django>=4.11",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
